# Orqis-Auto-Agent-DevOps

./: .env  .env.example  .gitignore  .mcp.json  Dockerfile  Makefile  Orqis_Product_Document_YC.docx  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  test_stream.py  upgrades.md
.github/workflows/: ci.yml
app/: globals.css  layout.tsx
components/: AnalyticsSection.tsx  DashboardPreview.tsx  FeaturesSection.tsx  FooterCTA.tsx  Nav.tsx  RobotCanvas.tsx  ScrollTextSection.tsx  TickerSection.tsx
demo/: break.py  service.py  support_agent.py  web_agent.py
demo/recording/: README.md
docs/: api-contracts.md  dogfood.md  local-dev.md  new-features.md
frontend/: .env.local.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/app/: page.tsx
frontend/components/: AnalyticsSection.tsx  FeaturesSection.tsx  FooterCTA.tsx  HeroSection.tsx  Nav.tsx  PricingSection.tsx  RobotScene.tsx  ScrollTextSection.tsx  SmoothScrollProvider.tsx  SplineScene.tsx  TickerSection.tsx
frontend/lib/: types.ts  useOrqisStream.ts
frontend/src/: App.tsx  index.css
orqis/: __init__.py  cli.py  config.py  llm.py
orqis/backend/: audit.py  changelog.py  db.py  deps.py  durable.py  health.py  models.py  server.py  sources.py  stats.py  store.py  tenancy.py  tenant_auth.py  workspace_auth.py  ws_manager.py
orqis/daemon/: __main__.py  interpreter.py  log_reader.py  normalizer.py  pattern_matcher.py
orqis/ingest/: adapters.py
orqis/instrumentation/: __init__.py  anthropic_patch.py  costs.py  emitter.py  heartbeat.py  langchain_patch.py  logs.py  openai_patch.py
orqis/integrations/: sentry.py
orqis/mcp/: client.py  server.py
orqis/notifications/: dispatcher.py
orqis/rca/: anomaly.py  applier.py  binding_drop.py  (+23 more)
packaging/sdk/: .gitignore  LICENSE  README.md  build.sh  pyproject.toml
packaging/sdk/overrides/: config.py
scripts/: apply_local_fix.py  bench_stress.py  create_github_app.py  drive_runaway_loop.py  preflight.py  record_vip_investor_demo.py  run_dogfood.ps1  run_dogfood.sh  tunnel_webhook.py
test-agent/: README.md
tests/: conftest.py  helpers.py  mcp_call_log.py  tenancy_helpers.py  test_agent_ide_flow.py  test_http_tenancy.py  test_pipeline_runaway.py  test_scan_keys.py  test_tenancy.py  test_workspace_invites.py  test_workspace_isolation.py
(+121 files in other folders)
